# checkolotl

./: Cargo.toml  LICENSE  README.md  minecraft.yaml  nordvpn.yaml
.github/workflows/: rust.yml
src/: config.rs  main.rs  template.rs
